vlib/v/checker/tests/assign_const_ptr_int_literal_err.out
vlib/v/checker/tests/assign_const_ptr_int_literal_err.vv:4:8: error: cannot assign a pointer to a constant with an integer literal value
    2 | 
    3 | fn main() {
    4 |     b := &a
      |           ^
    5 |     dump(b)
    6 | }
Details: Specify the type for the constant value. Example:
         `const a = int(3)`
vlib/v/checker/tests/assign_const_ptr_int_literal_err.vv:4:7: error: cannot have mutable reference to const `a`
    2 | 
    3 | fn main() {
    4 |     b := &a
      |          ^
    5 |     dump(b)
    6 | }
